# Newtonian-Fractals

./: .gitignore  CMakeLists.txt  README.md
include/: Menu.h  engine.h  gameworldctx.h  graphics.h  graphics_headers.h  main.h  shader.h  window.h
src/: Menu.cpp  engine.cpp  graphics.cpp  imgui_impl_sdl_gl3.cpp  main.cpp  shader.cpp  window.cpp
src/shaders/: default.frag  default.vert
